--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,16 +23,6 @@ ul {
   border-radius: 5px;
 }
 
-li {
-  padding: 15px;
-  font-size: 1.5rem;
-  margin-bottom: 15px;
-  background: #282c34;
-  border-radius: 5px;
-  overflow-wrap: break-word;
-  cursor: pointer;
-}
-
 input {
   height: 40px;
   width: 50%;
@@ -62,6 +52,12 @@ header {
   flex: 8;
   text-align: left;
   vertical-align: middle;
+}
+.homepageLogo {
+  opacity: 0.8;
+}
+.homepageLogo:hover {
+  transform: scale(1.1);
 }
 .menu-container{
   flex: 2;
